[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Profile.gd" type="Script" id=3]

[sub_resource type="ImageTexture" id=1]

[node name="Profile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.027451, 0.572549, 0.596078, 1 )

[node name="EditButton" type="Button" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -350.0
margin_right = 150.0
margin_bottom = -200.0
text = "Edytuj"

[node name="BackButton" type="Button" parent="Background"]
margin_left = 740.0
margin_top = 30.0
margin_right = 1040.0
margin_bottom = 180.0
text = "Powrót"

[node name="Notification" type="RichTextLabel" parent="Background"]
margin_left = 309.0
margin_top = 1500.0
margin_right = 1009.0
margin_bottom = 1580.0
custom_fonts/normal_font = ExtResource( 2 )

[node name="Avatar" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 250.0
margin_right = 320.0
margin_bottom = 890.0
texture = SubResource( 1 )
expand = true

[node name="Informations" type="VBoxContainer" parent="Background"]
margin_left = 40.0
margin_top = 1000.0
margin_right = 1040.0
margin_bottom = 1460.0
rect_min_size = Vector2( 950, 0 )
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Name" type="HBoxContainer" parent="Background/Informations"]
margin_right = 1000.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="Background/Informations/Name"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
rect_pivot_offset = Vector2( 291, 531 )
text = "Imie"
valign = 1

[node name="NameInput" type="LineEdit" parent="Background/Informations/Name"]
visible = false
margin_left = 254.0
margin_right = 954.0
margin_bottom = 100.0
rect_min_size = Vector2( 700, 100 )
rect_pivot_offset = Vector2( 1884, 342 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="NameValue" type="Label" parent="Background/Informations/Name"]
margin_left = 254.0
margin_right = 1000.0
margin_bottom = 100.0
rect_min_size = Vector2( 700, 100 )
rect_pivot_offset = Vector2( 1884, 342 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="Surname" type="HBoxContainer" parent="Background/Informations"]
margin_top = 120.0
margin_right = 1000.0
margin_bottom = 220.0
size_flags_horizontal = 3

[node name="SurnameLabel" type="Label" parent="Background/Informations/Surname"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
text = "Nazwisko"
valign = 1

[node name="SurnameInput" type="LineEdit" parent="Background/Informations/Surname"]
visible = false
margin_left = 254.0
margin_right = 954.0
margin_bottom = 100.0
rect_min_size = Vector2( 700, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="SurnameValue" type="Label" parent="Background/Informations/Surname"]
margin_left = 254.0
margin_right = 1000.0
margin_bottom = 100.0
rect_min_size = Vector2( 700, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="BankAccount" type="HBoxContainer" parent="Background/Informations"]
margin_top = 240.0
margin_right = 1000.0
margin_bottom = 340.0
size_flags_horizontal = 3

[node name="BankAccountLabel" type="Label" parent="Background/Informations/BankAccount"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
rect_pivot_offset = Vector2( -756, 263 )
text = "Nr konta"
valign = 1

[node name="BankAccountInput" type="LineEdit" parent="Background/Informations/BankAccount"]
visible = false
margin_left = 254.0
margin_right = 954.0
margin_bottom = 100.0
rect_min_size = Vector2( 700, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="BankAccountValue" type="Label" parent="Background/Informations/BankAccount"]
margin_left = 254.0
margin_right = 1000.0
margin_bottom = 100.0
rect_min_size = Vector2( 700, 100 )
rect_pivot_offset = Vector2( -1015, 263 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="Telephone" type="HBoxContainer" parent="Background/Informations"]
margin_top = 360.0
margin_right = 1000.0
margin_bottom = 460.0
size_flags_horizontal = 3

[node name="TelephoneLabel" type="Label" parent="Background/Informations/Telephone"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
rect_pivot_offset = Vector2( -756, 263 )
text = "Nr telefonu"
valign = 1

[node name="TelephoneInput" type="LineEdit" parent="Background/Informations/Telephone"]
visible = false
margin_left = 254.0
margin_right = 954.0
margin_bottom = 100.0
rect_min_size = Vector2( 700, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="TelephoneValue" type="Label" parent="Background/Informations/Telephone"]
margin_left = 254.0
margin_right = 1000.0
margin_bottom = 100.0
rect_min_size = Vector2( 700, 100 )
rect_pivot_offset = Vector2( -1015, 263 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="AvatarFileDialog" type="FileDialog" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Otwórz plik"
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/po/AplikacjaIO"
current_path = "/po/AplikacjaIO/"

[connection signal="pressed" from="Background/EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="Background/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="gui_input" from="Background/Avatar" to="." method="_on_Avatar_gui_input"]
[connection signal="confirmed" from="AvatarFileDialog" to="." method="_on_AvatarFileDialog_confirmed"]
